src/freecell/style.css
/**********/
/* Colors */
/**********/

html {
    --fgcolor: black;
    --bgcolor: white;
    --bgcolor2: #fafafa;
    --accent: rebeccapurple;
}

@media (prefers-color-scheme: dark) {
    html {
        --fgcolor: white;
        --bgcolor: black;
        --bgcolor2: #1f1f1f;
        --accent: pink;
    }
}

body {
    color: var(--fgcolor);
    background-color: var(--bgcolor);
}

a {
    color: var(--fgcolor);
    text-decoration-color: var(--accent);
}

a:focus,
a:visited,
a:hover {
    color: var(--accent);
}

blockquote {
    border-left: 1px solid var(--accent);
    background-color: var(--bgcolor2);
}


/**********/
/* Layout */
/**********/

* {
    box-sizing: border-box;
}

body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
        sans-serif;
    font-size: 16px;
}

header { display: none; }
footer {
    position: fixed;
    width: 100%;
    left: 0;
    bottom: 0.5em;
    padding-right: 0.5em;
    text-align: right;
}

main { padding-bottom: 1em }

pre,
code {
    font-family: "IBM Plex Mono", monospace;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-top: 1.25rem;
    margin-bottom: 0.5rem;
}

main {
    display: flex;
    flex-direction: column;
}

.top {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.cells {
    display: flex;
    justify-content: space-evenly;
}

.cell,
.actions,
.foundation,
.cascade {
    width: 10vw;
    border: 1px solid transparent;
    margin: 1px;
}

.cell,
.actions,
.foundation {
    min-height: 11vmax;

    display: flex;
    justify-content: center;
    align-items: center;
}

.cell { background-color: rgba(128,255,128,0.3) }
.foundation { background-color: rgba(128,128,128,0.3) }

.empty.cascade {
    border-color: rgba(128,255,128,0.3);
    margin-top: 1px;
}

main.picked .empty.cascade,
main.picked .empty.cell,
main.picked .card {
    cursor: crosshair;
}

.card {
    width: 10vw;
    height: 10vmax;
    border: 1px solid white;
    border-radius: 0.5em;
    text-align: center;
    font-size: xx-large;
    background-color: white;
    cursor: grab;
}

.cascade        { margin-top:  3vmax }
.cascade .card  { margin-top: -3vmax }

.cascade .card:focus {
    cursor: grabbing;
}

.cascade .card { box-shadow: 0px 3px 8px black }
.card:first-child { box-shadow: 0px 1px 2px black }

.card.picked {
    border-color: var(--accent);
}

.actions {
    text-align: center;
    color: var(--fgcolor);
    background-color: var(--bgcolor2);

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

.actions button {
    -webkit-text-fill-color: rgba(0, 0, 0, 1);
    -webkit-opacity: 1;
    opacity: 1;
}

.actions button {
    width: 100%;
    font-size: smaller;
    padding: 0.5em;
}

.foundations {
    display: flex;
    justify-content: space-evenly;
}

.cascades {
    list-style-type: none;
    padding-left: 0;
    display: flex;
    justify-content: space-evenly;
}

.cascade {
    list-style-type: none;
    padding-left: 0;
    display: flex;
    flex-direction: column;
}

.card .Hearts,
.card .Diamonds {
    color: red;
}

.card .Spades,
.card .Clubs {
    color: black;
}

.winner {
    color: var(--accent);
    background-color: var(--bgcolor);

    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.winner span {
    background: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
    filter: drop-shadow(1px 1px 1px var(--fgcolor));

    font-size: xx-large;
    font-style: italic;
}

@media screen and (min-width: 1024px) {
    .cascade        { margin-top:  5vmax }
    .cascade .card  { margin-top: -5vmax }
}

@media screen and (max-width: 375px) {

    .actions {
        flex-direction: row;
        min-height: unset;
        height: auto;
        order: 2;
        width: auto;
    }
    .actions button {
        width: 20vw;
    }

    .card { font-size: 1em; height: 9.5vmax; }
    .card .suit { display: block; }
    .card .rank { font-size: larger; display: block; }
}

